# nyayantar-ai

./: .dockerignore  .gitignore  README.md  api_server.py  app.py  data-ingestion.py  package.json  processed_files.txt  pyproject.toml  render.yaml  requirements.txt  start_nyayantar.bat  start_pipeline.py  stop_nyayantar.bat  test_language.py  test_property_laws.py
data/: THE TELANGANA LAND ENCROACHMENT ACT, 1905
nyayantar-ui/: README.md  package.json
nyayantar-ui/src/app/: globals.css  layout.tsx  page.tsx
nyayantar-ui/src/app/api/chat/: route.ts
nyayantar-ui/src/app/api/draft/: route.ts
nyayantar-ui/src/app/chat/: page.tsx
nyayantar-ui/src/app/landing/: page.tsx
nyayantar-ui/src/components/: ChatInput.tsx  FeatureTabs.tsx  Footer.tsx  Header.tsx  MultiModalChat.tsx
nyayantar-ui/src/contexts/: LanguageContext.tsx
prompts/: mainRAG-prompt.md  multiQuery-prompt.md
