[project]
name = "nyayantar-ai"
version = "0.1.0"
description = "A powerful, context-aware legal assistant chatbot built with LangChain and advanced RAG techniques"
authors = [
    {name = "Albin Xavier", email = ""}
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-openai>=0.3.28",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.1.0",
]
